implement bootstrap for theme

--- a/index.html
+++ b/index.html
@@ -1,13 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>Hadist Arbain</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-    <h1>Hadist 26</h1>
-    <p>عَنْ أَبِي هُرَيْرَةَ رضي الله عنه قَالَ: قَالَ رَسُولُ اللهِ صلى الله عليه وسلم: كُلُّ سُلاَمَى مِنَ النَّاسِ عَلَيْهِ صَدَقَةٌ كُلُّ يَومٍ تَطْلُعُ فِيْهِ الشَّمْسُ: تَعْدِلُ بَيْنَ اثْنَيْنِ صَدَقَةٌ، وَتُعِيْنُ الرَّجُلَ فِي دَابَّتِهِ فَتَحْمِلُه عَلَيْهَا أَوْ تَرْفَعُ لَهُ عَلَيْهَا مَتَاعَهُ صَدَقَةٌ، وَالْكَلِمَةُ الطَّيِّبَةُ صَدَقَةٌ، وَبِكُلِّ خُطْوَةٍ تَمْشِيْهَا إِلَى الصَّلاةِ صَدَقَةٌ، وَتُمِيْطُ الأَذَى عَنِ الطَّرِيْقِ صَدَقَةٌ. رَوَاهُ الْبُخَارِيُّ وَمُسْلِمٌ</p>
-</body>
+    <link rel="stylesheet" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/styles.css" />  
+  </head>
+
+  <body>
+    <div class="d-flex" id="wrapper">
+      <!-- Sidebar -->
+      <div class="bg-light border-right" id="sidebar-wrapper">
+        <div class="sidebar-heading">Daftar Isi</div>
+        <div class="list-group list-group-flush">
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 1</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 2</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 3</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 4</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 5</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 6</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 7</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 8</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 9</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 10</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 11</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 12</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 13</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 14</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 15</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 16</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 17</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 18</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 19</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 20</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 21</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 22</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 23</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 24</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 25</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 26</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 27</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 28</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 29</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 30</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 31</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 32</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 33</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 34</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 35</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 36</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 38</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 39</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 40</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 41</a>
+          <a href="#" class="list-group-item list-group-item-action bg-light">Hadist 42</a>
+        </div>
+      </div>
+      <!-- /#sidebar-wrapper -->
+
+      <!-- Page Content -->
+      <div id="page-content-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+          <button class="btn btn-primary" id="menu-toggle">Daftar Isi</button>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+
+        <div class="container-fluid">
+          <h1 class="mt-4">Hadist 1</h1>
+          <h2>Amalan Bergantung pada Niat</h2>
+          <p>
+            عَنْ أَمِيرِ المُؤمِنينَ أَبي حَفْصٍ عُمَرَ بْنِ الخَطَّابِ رَضيَ اللهُ عنْهُ قَالَ: سَمِعْتُ رَسُولَ اللهِ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ يَقُوْلُ: (( إِنَّمَا الأَعْمَالُ بِالنِّيَّاتِ، وَإِنَّمَا لِكُلِّ امْرِئٍ مَا نَوَى، فَمَنْ
+            كَانَتْ هِجْرَتُهُ إِلَِى اللهِ وَرَسُوْلِهِ فَهِجْرَتُهُ إِلَى اللهِ وَرَسُوْلِهِ، وَمَنْ كَانَتْ هِجْرَتُهُ لِدُنْيَا يُصِيْبُهَا، أَوْ امْرَأَةٍ يَنْكِحُهَا، فَهِجْرَتُهُ إِلَى مَا هَاجَرَ إِلَيْهِ )). رَوَاهُ إِمَامَا الْمُحَدِّثِيْنَ
+            أَبُوْ عَبْدِ اللهِ مُحَمَّدُ بْنُ إِسْمَاعِيْلَ بْنِ إِبْرَاهِيْمَ بْنِ الْمُغِيْرَةِ بْنِ بَرْدِزْبَهْ الْبُخَارِيُّ، وَأَبُوْ الْحُسَيْنِ مُسْلِمُ بْنُ الْحَجَّاجِ بْنِ مُسْلِمٍ الْقُشَيْرِيّ النَّيْسَابُوْرِيّ، فِيْ صَحِيْحَيْهِمَا
+            اللَّذَيْنِ هُمَا أَصَحُّ الْكُتُبِ اْلمُصَنَّفَةِ.
+          </p>
+          <h1 class="mt-4">Hadist 2</h1>
+          <h2>Rukun Islam, Iman, dan Ihsan</h2>
+          <p>
+            عَنْ عُمَرَ رضي الله عنه أَيضاً قَالَ: بَيْنَمَا نَحْنُ جُلُوْسٌ عِنْدَ رَسُوْلِ اللهِ صلى الله عليه و سلّم ذَاتَ يَوْمٍ إِذْ طَلَعَ عَلَيْنَا رَجُلٌ شَدِيْدُ بَيَاضِ الثِّيَابِ شَدِيْدُ سَوَادِ الشَّعْرِ لاَ يُرَى عَلَيْهِ أَثَرُ
+            السَّفَرِ وَلاَ يَعْرِفُهُ مِنَّا أَحَدٌ حَتَّى جَلَسَ إِلَى النَّبِيِّ صلى الله عليه وسلم فَأَسْنَدَ رُكْبَتَيْهِ إِلَى رُكْبَتَيْهِ وَوَضَعَ كَفَّيْهِ عَلَى فَخِذَيْهِ وَقَالَ: يَا مُحَمَّدُ أَخْبِرْنِي عَنِ الإِسْلاَم، فَقَالَ رَسُولُ
+            اللهِ صلى الله عليه وسلم: (الإِسْلاَمُ أَنْ تَشْهَدَ أَنْ لاَ إِلَهَ إِلاَّ اللهُ وَأَنَّ مُحَمَّدَاً رَسُوْلُ اللهِ، وَتُقِيْمَ الصَّلاَةَ، وَتُؤْتِيَ الزَّكَاةَ، وَتَصُوْمَ رَمَضَانَ، وَتَحُجَّ البيْتَ إِنِ اِسْتَطَعتَ إِليْهِ
+            سَبِيْلاً. قَالَ: صَدَقْتَ. فَعَجِبْنَا لَهُ يَسْأَلُهُ وَيُصَدِّقُهُ، قَالَ: فَأَخْبِرْنِيْ عَنِ الإِيْمَانِ، قَالَ: أَنْ تُؤْمِنَ بِاللهِ، وَمَلائِكَتِهِ، وَكُتُبِهِ وَرُسُلِهِ، وَالْيَوْمِ الآَخِرِ، وَتُؤْمِنَ بِالقَدَرِ خَيْرِهِ
+            وَشَرِّهِ قَالَ: صَدَقْتَ، قَالَ: فَأَخْبِرْنِيْ عَنِ الإِحْسَانِ، قَالَ: أَنْ تَعْبُدَ اللهَ كَأَنَّكَ تَرَاهُ، فَإِنْ لَمْ تَكُنْ تَرَاهُ فَإِنَّهُ يَرَاكَ قَالَ: فَأَخْبِرْنِي عَنِ السَّاعَةِ، قَالَ: مَا الْمَسئُوُلُ عَنْهَا بِأَعْلَمَ
+            مِنَ السَّائِلِ قَالَ: فَأَخْبِرْنِيْ عَنْ أَمَارَاتِهَا، قَالَ: أَنْ تَلِدَ الأَمَةُ رَبَّتَهَا، وَأَنْ تَرَى الْحُفَاةَ الْعُرَاةَ الْعَالَةَ رِعَاءَ الشَّاءِ يَتَطَاوَلُوْنَ فِي البُنْيَانِ ثُمَّ انْطَلَقَ فَلَبِثْتُ مَلِيَّاً ثُمَّ
+            قَالَ: يَا عُمَرُ أتَدْرِي مَنِ السَّائِلُ؟ قُلْتُ: اللهُ وَرَسُوْلُهُ أَعْلَمُ، قَالَ: فَإِنَّهُ جِبْرِيْلُ أَتَاكُمْ يُعَلِّمُكُمْ دِيْنَكُمْ. رَوَاهُ مُسْلِمٌ
+          </p>
+          <h1 class="mt-4">Hadist 3</h1>
+          <h2>Islam Dibangun di atas Lima Dasar</h2>
+          <p>
+            عَنْ أَبِيْ عَبْدِ الرَّحْمَنِ عَبْدِ اللهِ بْنِ عُمَرَ بْنِ الخَطَّابِ رَضِيَ اللهُ عَنْهُمَا قَالَ: سَمِعْتُ النَّبِيَّ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ يَقُوْلُ: (بُنِيَ الإِسْلاَمُ عَلَى خَمْسٍ: شَهَادَةِ أَنْ لاَ إِلَهَ إِلاَّ اللهُ وَأَنَّ مُحَمَّدًا رَسُوْلُ اللهِ، وَإِقَامِ الصَّلاَةِ، وَإِيْتَاءِ الزَّكَاةِ، وَحَجِّ البَيْتِ، وَصَوْمِ رَمَضَانَ) رَوَاهُ الْبُخَارِيُّ وَمُسْلِمٌ
+          </p>
+        </div>
+      </div>
+      <!-- /#page-content-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+
+    <!-- Menu Toggle Script -->
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script defer>
+      $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+      });
+    </script>
+  </body>
 </html>
