--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Hadist Arbain</title>
-        <link rel="stylesheet" href="styles/bootstrap.min.css" />
-        <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="styles/bootstrap.min.css" as="bootstrap" onload="this.onload=null;this.rel='stylesheet'"/>
+        <link rel="stylesheet" href="styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
+        <noscript>
+            <link rel="stylesheet" href="styles/bootstrap.min.css">
+            <link rel="stylesheet" href="styles/styles.css"/>
+        </noscript>
     </head>
 
     <body data-spy="scroll" data-target="#sidebar-wrapper" data-offset="50">
